@startuml table


package main_db as ext <<Database>> {

  entity contests {
    + id
    --
    cont_id [PK]
    name
    text
    start_date
    cont_type [FK]
    term
    input_template
    data
    view
  }


  entity UC_relate {
    + id
    --
    user_id [PK][FK]
    cont_id [PK][FK]

    input
    login_token
  }

  entity user {
    + id
    --
    user_id [PK]
    password (hashed)
  }

  entity cont_types {
  + id
  --
    cont_type [PK]
  }

}

user |o--o{ UC_relate
UC_relate }o-ri-o| contests
cont_types |o--o{ contests

@enduml
